<resources>
    <string name="app_name">E-Commerce</string>
    <!--    Welcome Screen-->
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>

    <!--    Strings for Dashboard-->
    <string name="search">Search Your Product</string>
    <!--        Categories-->
    <string name="men">Man</string>
    <string name="women">Woman</string>
    <string name="kids">Kids</string>
    <string name="baby">Baby</string>

    <!--    Titles-->
    <string name="categories">Categories</string>
    <string name="featured">Featured</string>
    <string name="bestsell">Best Sell</string>
    <string name="see_all">See all</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>